# serde_encom

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
bench/: Cargo.toml
benches/: benchmark.rs
des_buffer/: Cargo.toml
des_buffer/src/: lib.rs
src/: error.rs  lib.rs  macros.rs
src/des/: deserializer.rs  mod.rs  parser_number.rs  read.rs  stack.rs  stream_deserializer.rs
src/des/access/: init_map.rs  init_seq.rs  map.rs  mod.rs  seq.rs  unit_variant.rs  variant.rs
src/des/access/saved/: init_map.rs  init_seq.rs  map.rs  mod.rs  seq.rs
src/des/access/scratch/: init_map.rs  init_seq.rs  map.rs  mod.rs  seq.rs
src/des/wrapper/: init.rs  map_key.rs  mod.rs  saved_map_key.rs  saved_seq.rs  scratch.rs  scratch_map_key.rs
src/features_check/: error.rs
src/io/: core.rs  mod.rs
src/ser/: compound.rs  mod.rs  serializer.rs
src/ser/formatter/: compact.rs  formatter.rs  mod.rs  pretty.rs
src/ser/wrapper/: data.rs  init.rs  map_key.rs  mod.rs  seq.rs
src/test/: bytes.rs  int.rs  map.rs  mod.rs  option_int.rs  vec.rs  vec_char.rs  vec_int.rs  vec_option_int.rs  vec_str.rs
src/test/struc/: big.rs  big_rename.rs  bool.rs  bytes.rs  mod.rs  option_int.rs  option_string.rs  small_rename.rs  str_slice.rs  vec_str.rs
src/test/value/: map.rs  mod.rs  seq.rs
src/value/: des.rs  from.rs  index.rs  map.rs  mod.rs  number.rs  ser.rs
src/value/seed/: bytes.rs  mod.rs  str.rs  u64.rs
stack/: Cargo.toml
stack/src/: lib.rs  stack.rs  stack_last.rs  stack_raw.rs
tests/: bytes.rs  int.rs  map.rs  mod.rs  option_int.rs  vec.rs
tests/struc/: big.rs  big_rename.rs  bool.rs  bytes.rs  option_int.rs  option_string.rs  small_rename.rs  str_slice.rs  vec_str.rs
tests/value/: map.rs  mod.rs  seq.rs
