[package]
name = "serde_encom_benchmark"
version = "0.1.0"
authors = ["Dmitry Rodionov <gh@rdmtr.com>"]
description = "Official EnCom library benchmark"
edition = "2021"
publish = false

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_encom = { path = ".." }

[[bench]]
name = "benchmark"
harness = false
